Retrocompatibilità - java 16